<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.4.2</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  <groupId>com.yongj</groupId>
  <artifactId>file-server</artifactId>
  <version>0.0.1</version>
  <name>file-server</name>
  <properties>
    <java.version>8</java.version>
  </properties>
  <dependencies>

    <dependency>
      <groupId>com.curtisnewbie</groupId>
      <artifactId>authmodule</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context-support</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-aop</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjweaver</artifactId>
    </dependency>

    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjrt</artifactId>
    </dependency>

    <dependency>
      <groupId>com.curtisnewbie</groupId>
      <artifactId>service-module</artifactId>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.7.0</version>
      <scope>test</scope>
    </dependency>

    <!-- https://github.com/CurtisNewbie/comment-generator-->
    <!--    <dependency>-->
    <!--      <groupId>com.curtisnewbie</groupId>-->
    <!--      <artifactId>comment-generator</artifactId>-->
    <!--    </dependency>-->

    <dependency>
      <groupId>com.curtisnewbie</groupId>
      <artifactId>common-module</artifactId>
    </dependency>

    <dependency>
      <groupId>com.curtisnewbie</groupId>
      <artifactId>log-tracing-module</artifactId>
    </dependency>

    <dependency>
      <groupId>com.curtisnewbie</groupId>
      <artifactId>redis-util-module</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.session</groupId>
      <artifactId>spring-session-data-redis</artifactId>
    </dependency>

    <dependency>
      <groupId>org.mybatis.spring.boot</groupId>
      <artifactId>mybatis-spring-boot-starter</artifactId>
    </dependency>

    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
    </dependency>

    <dependency>
      <groupId>com.curtisnewbie</groupId>
      <artifactId>distributed-task-module</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <!--      <plugin>-->
      <!--        <groupId>org.mybatis.generator</groupId>-->
      <!--        <artifactId>mybatis-generator-maven-plugin</artifactId>-->
      <!--        <version>1.4.0</version>-->
      <!--        <dependencies>-->
      <!--          <dependency>-->
      <!--            <groupId>com.curtisnewbie</groupId>-->
      <!--            <artifactId>comment-generator</artifactId>-->
      <!--            <version>1.0-SNAPSHOT</version>-->
      <!--          </dependency>-->
      <!--        </dependencies>-->
      <!--        <configuration>-->
      <!--          <configurationFile>generatorConfig.xml</configurationFile>-->
      <!--        </configuration>-->
      <!--      </plugin>-->
    </plugins>
  </build>

  <dependencyManagement>
    <!-- https://github.com/CurtisNewbie/curtisnewbie-bom/tree/main/microservice -->
    <dependencies>
      <dependency>
        <groupId>com.curtisnewbie</groupId>
        <artifactId>curtisnewbie-bom</artifactId>
        <version>micro-0.0.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
